--- a/package.json
+++ b/package.json
@@ -5,13 +5,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx @11ty/eleventy",
-    "start": "npx @11ty/eleventy --serve"
+    "build:webpack": "webpack --mode production",
+    "build:eleventy": "eleventy",
+    "build": "run-s build:*",
+    "start": "npx @11ty/eleventy --serve",
+    "watch": "webpack --watch --mode development"
   },
   "author": "Max Kohler",
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^0.10.0",
     "eleventy-plugin-sass": "^1.0.0"
+  },
+  "dependencies": {
+    "csv-parse": "^4.10.1",
+    "npm-run-all": "^4.1.5",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   }
 }
